k8s/bar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: bar-app
        image: docker.io/kicbase/echo-server:1.0
        ports:
        - containerPort: 7080
---
apiVersion: v1
kind: Service
metadata:
  name: bar-service
spec:
  selector:
    app: bar
  ports:
    - port: 7080
      targetPort: 7080
  type: ClusterIP
