k8s/foo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: foo-app
        image: docker.io/kicbase/echo-server:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: foo-service
spec:
  selector:
    app: foo
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
